--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.7",
+    "@clerk/clerk-react": "^5.23.0",
+    "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.1.25",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
